<resources>
    <string name="app_name">TallerFirebase</string>
    <string name="title_activity_map">Map</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="correo">Correo</string>
    <string name="password">Password</string>
    <string name="galeria">Galería</string>
    <string name="camara">Cámara</string>
    <string name="registrarse">Registrarse</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="title_activity_maps">Map</string>
    <string name="hintAddress">Ingrese una dirección</string>
</resources>
